@@ -52,9 +52,13 @@ module Netzke
       actions && res.merge!(:actions => actions)
       menu    && res.merge!(:menu    => menu)
 
+      # Inform the JavaScript side if persistent_config is enabled
+      res[:persistent_config] = persistent_config_enabled
+
       # Merge with all config options passed as hash to config[:ext_config]
       res.merge!(ext_config)
   
+
       res
     end
   
